--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="info-item">
                         <strong>Last Updated:</strong>
-                        <span>{{ moment().format('MMMM DD, YYYY') }}</span>
+                        <span>{{ datetime.now().strftime('%B %d, %Y') }}</span>
                     </div>
                 </div>
             </div>
