--- a/templates/admin/shows.html
+++ b/templates/admin/shows.html
@@ -140,7 +140,7 @@
                         <i class="fas fa-calendar"></i>
                         Show Date
                     </label>
-                    <input type="date" id="show_date" name="show_date" min="{{ (moment()).format('YYYY-MM-DD') }}" required>
+                    <input type="date" id="show_date" name="show_date" required>
                 </div>
                 
                 <div class="form-group">
