--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 
         <div class="movies-grid">
             {% for movie in movies %}
-            <div class="movie-card">
+            <div class="movie-card animate-fade-in-up" style="animation-delay: {{ loop.index0 * 0.1 }}s">
                 <div class="movie-poster">
                     {% if movie.image_url %}
                         <img src="{{ movie.image_url }}" alt="{{ movie.title }}" onerror="this.src='{{ url_for('static', filename='images/default-movie.jpg') }}'">
@@ -98,7 +98,7 @@
         </div>
         
         <div class="features-grid">
-            <div class="feature-card">
+            <div class="feature-card animate-slide-in-left" style="animation-delay: 0s">
                 <div class="feature-icon">
                     <i class="fas fa-ticket-alt"></i>
                 </div>
@@ -106,7 +106,7 @@
                 <p>Book your tickets in just a few clicks with our user-friendly interface</p>
             </div>
             
-            <div class="feature-card">
+            <div class="feature-card animate-slide-in-left" style="animation-delay: 0.2s">
                 <div class="feature-icon">
                     <i class="fas fa-couch"></i>
                 </div>
@@ -114,7 +114,7 @@
                 <p>Choose your preferred seats with our interactive seat map</p>
             </div>
             
-            <div class="feature-card">
+            <div class="feature-card animate-slide-in-left" style="animation-delay: 0.4s">
                 <div class="feature-icon">
                     <i class="fas fa-star"></i>
                 </div>
@@ -122,7 +122,7 @@
                 <p>Read reviews and ratings from other movie lovers</p>
             </div>
             
-            <div class="feature-card">
+            <div class="feature-card animate-slide-in-left" style="animation-delay: 0.6s">
                 <div class="feature-icon">
                     <i class="fas fa-mobile-alt"></i>
                 </div>
