--- a/templates/base.html
+++ b/templates/base.html
@@ -16,16 +16,16 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <a href="{{ url_for('home') }}">
+                <a href="/">
                     🎬 MovieHub
                 </a>
             </div>
             
             <div class="nav-menu">
-                <a href="{{ url_for('home') }}" class="nav-link">
+                <a href="/" class="nav-link">
                     🏠 Home
                 </a>
-                <a href="{{ url_for('admin_dashboard') }}" class="nav-link">
+                <a href="/admin/" class="nav-link">
                     ⚙️ Admin
                 </a>
             </div>
@@ -63,8 +63,8 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="{{ url_for('home') }}">Movies</a></li>
-                        <li><a href="{{ url_for('admin_dashboard') }}">Admin Panel</a></li>
+                        <li><a href="/">Movies</a></li>
+                        <li><a href="/admin/">Admin Panel</a></li>
                     </ul>
                 </div>
                 
